--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <main role="main">
     <h1>hellofdp</h1>
-    <nav id="contact">
+    <nav role="navigation">
       <ul>
         <li>
           <a href="mailto:bonjour@hellofdp.co">mail</a>
