--- a/index.html
+++ b/index.html
@@ -8,10 +8,14 @@
   <title>hellofdp</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
+  <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon">
+  <link rel="apple-touch-icon" href="assets/images/icon.png">
+  <link rel="stylesheet" href="assets/css/min.css">
 </head>
 
 <body>
   <main role="main">
+    <div id="canvas"></div>
     <h1>hellofdp</h1>
     <nav role="navigation">
       <ul>
@@ -25,6 +29,7 @@
     </nav>
 
   </main>
+  <script src="assets/js/min.js"></script>
 </body>
 
 </html>
